<resources>
    <string name="app_name">AFI Perú</string>
    <string name="loading">Cargando…</string>
    <string name="please_wait">Espere unos segundos</string>
    <string name="save_success">Se guardó con éxito</string>
    <string name="save_failed">No se pudo guardar</string>
    <string name="no_internet">Se necesita conexión a Internet para realizar esta operación.</string>
    <string name="no_date_selected">--/--/----</string>
    <string name="recover_password">Para recuperar su contraseña escriba su correo electrónico:</string>
    <string name="welcome">Bienvenido, %s</string>
    <string name="wrong_username_or_password">Usuario o contraseña inválido</string>
    <string name="recover_password_confirm">Se ha enviado una nueva contraseña a su correo</string>
    <string name="recover_password_failure">No se puedo reestablecer su contraseña</string>
    <string name="cant_verify_user">No se pudo verificar su usuario. Intente ingresar nuevamente.</string>
    <string name="data_not_synced">Hay información que no se ha sincronizado porque no hay conexión a Internet. Si cierra sesión, esta información se perderá. ¿Desea continuar?</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_personas">Personas</string>
    <string name="menu_sesiones">Sesiones</string>
    <string name="menu_documentos">Documentos</string>
    <string name="menu_subir_fotos">Subir fotos</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_donaciones">Donaciones</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_postular">Postular a 2016-1</string>
    <string name="title_asistencia">Asistencia</string>
    <string name="title_comentarios">Comentarios</string>
    <string name="title_calendar">Calendario de sesiones</string>
    <string name="tab_all">TODO</string>
    <string name="tab_favorite">FAVORITOS</string>
    <string name="tab_users">USUARIOS</string>
    <string name="tab_kids">NIÑOS</string>
    <string name="login_message">Ingresa a tu cuenta</string>
    <string name="login_email_hint">Correo electrónico</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_btn_enter">Iniciar sesión</string>
    <string name="login_btn_recover_password">Recuperar contraseña</string>
    <string name="login_footer">© 2015 Keinions. Todos los derechos reservados.\nFooter de texto largo largo largo blablabla</string>
    <string name="search_generic">Buscar</string>
    <string name="pick_date">Seleccionar fecha</string>
    <string name="documents_none">No se encontraron documentos.</string>
    <string name="documents_size_date">%1$s - %2$s</string>
    <string name="documents_menu_view">Ver</string>
    <string name="documents_menu_download">Descargar</string>
    <string name="documents_menu_check_views">Revisar vistas</string>
    <string name="documents_menu_search">Buscar documentos</string>
    <string name="search_doc_title">Título del documento</string>
    <string name="no_application_to_open_file">El documento se ha descargado en la carpeta %s/Files, pero no cuenta con una aplicación apropiada para abrirlo.</string>
    <string name="file_not_found">No se encontró el archivo.</string>
    <string name="news_none">No se encontraron noticias.</string>
    <string name="news_menu_favorite">Agregar a favoritos</string>
    <string name="news_menu_search">Buscar noticias</string>
    <string name="search_article_title">Título del artículo</string>
    <string name="delete_news_favorite">¿Borrar esta noticia de tus favoritos?</string>
    <string name="news_article_comment">Comentar en la página Web</string>
    <string name="news_article_share">Compartir en Facebook</string>
    <string name="article_example">El Ministerio de la Mujer y Poblaciones Vulnerables (MIMP), destacó la aprobación del reglamento de la Ley General del Voluntario que busca promover la solidaridad y conciencia social entre los peruanos y peruanas, y que establece diversos beneficios de carácter social, salud y educativos a favor de las personas que realicen ete tipo de actividades.\n\nEl reglamento de la ley indica que toda persona mayor de 14 años podrá ser voluntaria siempre y cuando sdfsdf sdfk weh weir oweir uoweir uweori uweoriwue roiweu rowieur oweir woeiruwoeir oweij fsldkf weori hwe sidf ,weir weroiweur po</string>
    <string name="volunteers_none">No se encontraron voluntarios.</string>
    <string name="sessions_none">No se encontraron sesiones.</string>
    <string name="sessions_menu_docs">Ver documentos</string>
    <string name="sessions_menu_map">Ver mapa</string>
    <string name="sessions_menu_show_comments">Ver comentarios</string>
    <string name="sessions_menu_comment">Registrar comentarios</string>
    <string name="sessions_menu_attendance">Marcar asistencia</string>
    <string name="kids_none">No se encontraron niños.</string>
    <string name="kids_age">%d años</string>
    <string name="search_title_kids">Buscar niños</string>
    <string name="search_age">Edad</string>
    <string name="search_range_from">Entre</string>
    <string name="search_range_to">y</string>
    <string name="search_sex">Sexo</string>
    <string name="comments_none">No se encontraron comentarios.</string>
    <string name="search_title_comments">Buscar comentarios</string>
    <string name="search_author_content">Autor o contenido</string>
    <string name="search_from">Desde</string>
    <string name="search_to">Hasta</string>
    <string name="search_order_by">Ordenar por</string>
    <string name="search_order_by_recent_date">Más actual</string>
    <string name="search_yes">Buscar</string>
    <string name="search_no">Cancelar</string>
    <string name="comment_yes">Comentar</string>
    <string name="comment_no">Cancelar</string>
    <string name="insert_comment">Ingrese su comentario</string>
    <string name="number_of_sessions">Sesiones</string>
    <string name="sex_male">Masculino</string>
    <string name="sex_female">Femenino</string>
    <string name="upload_photos_menu_gallery">Elegir foto de la galería</string>
    <string name="upload_photos_menu_camera">Tomar foto</string>
    <string name="upload_photos_button">Enviar</string>
    <string name="no_photo_message">No se ha elegido ninguna imagen.\n\nPor favor elija una de la galería o tome una foto nueva.</string>
    <string name="photo_success">La foto se subió correctamente.</string>
    <string name="blogs_none">No se encontraron artículos de blog.</string>
    <string name="blog_go_to_comments">Ver comentarios</string>
    <string name="author_short_desc_example">Psicólogo</string>
    <string name="blogs_menu_search">Buscar artículos de blog</string>
    <string name="delete_blog_favorite">¿Borrar este artículo de tus favoritos?</string>
    <string name="users_none">No se encontraron usuarios.</string>
    <string name="users_menu_search">Buscar usuarios</string>
    <string name="search_name">Nombre o apellido</string>
    <string name="search_doc_number">Número de documento</string>
    <string name="search_profile">Perfil</string>
    <string name="people_kids_none">No se encontraron niños.</string>
    <string name="people_kids_menu_search">Buscar niños</string>
    <string name="people_menu_map">Mapa de colegios</string>
    <string name="search_profile_options_any">Cualquiera</string>
    <string-array name="search_profile_options">
        <item>@string/search_profile_options_any</item>
        <item>Miembro de AFI</item>
        <item>Voluntario</item>
        <item>Padrino</item>
    </string-array>
    <string name="select_gender">Elija un género</string>
    <string-array name="search_gender_options">
        <item>@string/search_profile_options_any</item>
        <item>@string/sex_male</item>
        <item>@string/sex_female</item>
    </string-array>
    <string name="confirm_postulate">¿Estás seguro de que quieres postular a este periodo?</string>
    <string name="see_map">Mapa</string>
    <string name="map_menu_search">Buscar dirección</string>
    <string name="search_address">Dirección</string>
    <string name="map_menu_save">Guardar cambios</string>
    <string name="marker_event_address">Dirección del evento</string>
    <string name="marker_session_address">Dirección de la sesión</string>
    <string name="marker_session_reunion">Punto de reunión</string>
    <string name="marker_info_school">Colegio: %1$s</string>
    <string name="marker_info_volunteer">Voluntario: %1$s</string>
    <string name="no_locations">No se encontraron colegios ni voluntarios.</string>
    <string name="no_address">No se encontró la dirección.</string>
    <string name="no_my_location">No se pudo acceder a su ubicación.</string>
    <string name="no_direction">No se pudo encontrar una ruta.</string>
    <string name="choose_address">Elija una dirección.</string>
    <string name="connection_failed">Ocurrió un error en la conexión.</string>
    <string name="save_not_needed">No hay cambios que guardar.</string>
    <string name="save_needed">No ha guardado los cambios en los puntos de reunión. ¿Qué desea hacer?</string>
    <string name="save_needed_save">Guardar</string>
    <string name="save_needed_exit">Descartar</string>
    <string name="save_needed_cancel">Cancelar</string>
    <string name="config_personal">Datos personales</string>
    <string name="config_personal_phone">Teléfono</string>
    <string name="config_personal_address">Cambiar dirección</string>
    <string name="config_personal_password">Cambiar contraseña</string>
    <string name="config_calendar">Calendario</string>
    <string name="config_calendar_sync">Sincronizar eventos</string>
    <string name="config_notifications">Notificaciones</string>
    <string name="config_notifications_events">Eventos próximos</string>
    <string name="config_notifications_payments">Pagos pendientes</string>
    <string name="config_sign_out">Cerrar sesión</string>
    <string name="password_must_have_8">La nueva contraseña debe tener al menos 8 caracteres</string>
    <string name="password_not_same">Las contraseñas no coinciden</string>
    <string name="payment_header_expiration_date">Vence</string>
    <string name="payment_header_mount">Monto</string>
    <string name="payment_header_state">Estado</string>
    <string name="payment_header_action">Acción</string>
    <string name="payment_none">No se encontró ningún pago</string>
    <string name="payment_deposit">Depósito</string>
    <string name="payment_status_expired">Vencido</string>
    <string name="payment_status_pending">Pendiente</string>
    <string name="payment_status_approved">Pagado</string>
    <string name="payment_status_approval_pending">Por aprobar</string>
    <string name="payment_btn">Pagar</string>
    <string name="payment_btn2">Registrar pago</string>
    <string name="payment_method">Método de pago</string>
    <string name="payment_method_prompt">Seleccione un método de pago.</string>
    <string name="payment_method_deposit">Depósito</string>
    <string name="payment_method_paypal">PayPal</string>
    <string name="voucher">Nro. Voucher</string>
    <string name="payment_date">Fecha del pago:</string>
    <string name="payment_success">Se realizó el pago con éxito</string>
    <string name="payment_failure">No se pudo realizar el pago</string>
    <string name="payment_date_wrong">No puede seleccionar una fecha después de la actual</string>
    <string name="voucher_code_missing">Introduzca un número de voucher</string>
    <string name="period">Periodo</string>
    <string name="downloaded_users">Descargas de voluntarios</string>
    <string name="sync_comments">Sincronizando comentarios...</string>
</resources>