<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    android:padding="@dimen/margin_small">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_author_content"/>
        <EditText
            android:id="@+id/comments_search_text"
            android:layout_width="@dimen/edit_text_medium"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:theme="@style/edit_text"
            android:singleLine="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_from"/>
        <TextView
            android:id="@+id/comments_search_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/no_date_selected"
            android:textAppearance="@style/text_appearance_medium_dark_soft"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_to"/>
        <TextView
            android:id="@+id/comments_search_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/no_date_selected"
            android:textAppearance="@style/text_appearance_medium_dark_soft"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_order_by"/>
        <TextView
            android:id="@+id/comments_search_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textAppearance="@style/text_appearance_medium_dark_soft"
            android:text="@string/search_order_by_recent_date"/>
    </RelativeLayout>
</LinearLayout>