<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    android:padding="@dimen/margin_small">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_name"/>
        <EditText
            android:layout_width="@dimen/edit_text_medium"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:theme="@style/edit_text"
            android:singleLine="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_age"/>
        <EditText
            android:id="@+id/kid_search_age_to"
            android:layout_width="@dimen/edit_text_small"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:theme="@style/edit_text"
            android:editable="false"/>
        <TextView
            android:id="@+id/kid_search_age_tag_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/kid_search_age_to"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_range_to"/>
        <EditText
            android:id="@+id/kid_search_age_from"
            android:layout_width="@dimen/edit_text_small"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/kid_search_age_tag_to"
            android:layout_centerVertical="true"
            android:theme="@style/edit_text"
            android:editable="false"/>
        <TextView
            android:id="@+id/kid_search_age_tag_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/kid_search_age_from"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_small"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_range_from"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_sex"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textAppearance="@style/text_appearance_medium_dark_soft"
            android:text="@string/search_profile_options_any"/>
    </RelativeLayout>
</LinearLayout>