<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_personal"
            android:textAppearance="@style/text_appearance_large_dark"
            android:layout_marginTop="@dimen/margin_top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:orientation="vertical">
            <TextView
                android:id="@+id/config_change_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_personal_password"
                android:textAppearance="@style/text_appearance_medium_dark_soft"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_view_divider"
            android:layout_marginTop="@dimen/margin_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_calendar"
            android:textAppearance="@style/text_appearance_large_dark"
            android:layout_marginTop="@dimen/margin_top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_calendar_sync"
                    android:textAppearance="@style/text_appearance_medium_dark_soft"
                    android:layout_alignParentLeft="true"
                    android:background="?attr/selectableItemBackgroundBorderless"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_view_divider"
            android:layout_marginTop="@dimen/margin_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_notifications"
            android:textAppearance="@style/text_appearance_large_dark"
            android:layout_marginTop="@dimen/margin_top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_notifications_events"
                    android:textAppearance="@style/text_appearance_medium_dark_soft"
                    android:layout_alignParentLeft="true"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_notifications_payments"
                    android:textAppearance="@style/text_appearance_medium_dark_soft"
                    android:layout_alignParentLeft="true"/>
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_view_divider"
            android:layout_marginTop="@dimen/margin_medium"/>
        <TextView
            android:id="@+id/config_sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_sign_out"
            android:textAppearance="@style/text_appearance_large_dark"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>
</LinearLayout>