<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    android:padding="@dimen/margin_small">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_name"/>
        <EditText
            android:layout_width="@dimen/edit_text_medium"
            android:id="@+id/user_fullname"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:theme="@style/edit_text"
            android:singleLine="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_doc_number"/>
        <EditText
            android:layout_width="@dimen/edit_text_medium"
            android:id="@+id/user_nrodoc"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:theme="@style/edit_text"
            android:inputType="number"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/edit_text_medium"
            android:textAppearance="@style/text_appearance_medium_dark"
            android:text="@string/search_profile"/>
        <TextView
            android:id="@+id/combo_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:editable = "true"
            android:clickable="true"
            android:textAppearance="@style/text_appearance_medium_dark_soft"
            android:text="@string/search_profile_options_any"/>
    </RelativeLayout>
</LinearLayout>